welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  if (Maths.abs(10-a)==Math.abs(10-b)){
    if (a<b){
      return a
    }
    else return b
  }else if (Maths.abs(10-a)<Math.abs(10-b)){
    return a
  }else return b
}